# zos

./: CMakeLists.txt  README.md  create_fragmented  fat-reader.c  file_system.cpp  file_system.h  file_system_defragmenter.cpp  file_system_defragmenter.h  job.h  job_list.cpp  job_list.h  main.cpp  string_functions.cpp  string_functions.h  ukazkaFAT.cpp  zmk.h
